# acecode

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  ACECODE.md  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  DOCS_INDEX.md  PROJECT_ORGANIZATION.md  QUICK_REFERENCE.md  README.md  README_CN.md  REFACTORING_COMPLETE.md  REFACTORING_SUMMARY.md  THIRD-PARTY-NOTICES  TODO.md  build_output.txt  main.cpp  package-lock.json  tatus  vcpkg.json
ace-browser-cli/: CMakeLists.txt  README.md
ace-browser-cli/scripts/: smoke.ps1
ace-browser-cli/src/: main.cpp
ace-browser-host/: CMakeLists.txt  README.md
ace-browser-host/scripts/: redelivery_smoke.ps1  smoke.ps1
ace-browser-host/src/: main.cpp
acetui/: CMakeLists.txt  README.md
acetui/examples/: hello_chat.cpp
acetui/src/: app.cpp  insert_history.cpp  terminal_posix.cpp  terminal_win.cpp  viewport.cpp
docs/: 待开发.md  (+10 more)
examples/ftxui_helloworld/: CMakeLists.txt  README.md  main.cpp
tests/: CMakeLists.txt  README.md  permissions_test.cpp  skill_registry_test.cpp  smoke_test.cpp
tests/agent_loop/: agent_loop_ask_user_question_parallel_test.cpp  agent_loop_compact_events_test.cpp  agent_loop_doom_guard_test.cpp  agent_loop_empty_response_integration_test.cpp  agent_loop_goal_test.cpp  agent_loop_metadata_injection_test.cpp  agent_loop_plan_mode_test.cpp  agent_loop_termination_test.cpp  agent_loop_todo_write_test.cpp  agent_loop_tool_lifecycle_events_test.cpp  agent_loop_tool_result_storage_test.cpp  agent_loop_turn_steering_test.cpp  shell_write_guard_test.cpp  stub_provider.hpp
tests/browser/: ace_browser_host_cli_test.cpp
tests/cli/: interactive_options_test.cpp
tests/commands/: builtin_commands_test.cpp  compact_core_test.cpp  configure_catalog_test.cpp  configure_picker_test.cpp  desktop_command_test.cpp  goal_command_test.cpp  init_command_test.cpp  model_command_test.cpp  opencode_command_test.cpp  proxy_command_test.cpp  remote_control_command_test.cpp  slash_command_ranking_test.cpp  websearch_command_test.cpp
tests/config/: config_ace_browser_bridge_test.cpp  config_agent_loop_test.cpp  config_connectors_test.cpp  config_desktop_background_process_test.cpp  config_desktop_close_behavior_test.cpp  config_desktop_close_to_tray_test.cpp  config_desktop_notifications_test.cpp  config_first_init_test.cpp  config_git_context_test.cpp  config_memory_and_instructions_test.cpp  config_models_dev_test.cpp  config_proxy_probe_test.cpp  config_remote_control_channel_test.cpp  config_tui_test.cpp  config_ui_locale_test.cpp  config_upgrade_test.cpp  config_web_search_test.cpp  config_web_ui_preferences_test.cpp  default_session_preferences_test.cpp  saved_models_editor_test.cpp  saved_models_test.cpp
tests/connectors/: connector_auth_recovery_test.cpp
tests/daemon/: cli_parse_test.cpp  concurrent_session_e2e_test.cpp  mcp_runtime_test.cpp  runtime_files_test.cpp
tests/desktop/: chromium_app_launcher_test.cpp  daemon_pool_test.cpp  desktop_about_test.cpp  desktop_restart_test.cpp  edge_app_launcher_test.cpp  external_url_test.cpp  locale_test.cpp  notifications_native_test.cpp  notifications_test.cpp  notifications_win_test.cpp  open_in_explorer_test.cpp  open_request_test.cpp  pick_active_test.cpp  single_instance_test.cpp  strings_test.cpp  tray_menu_payload_test.cpp  tray_menu_popup_model_test.cpp  tray_menu_render_test.cpp  url_builder_test.cpp  web_host_close_handler_test.cpp  webview2_runtime_probe_test.cpp  window_background_test.cpp  window_chrome_test.cpp  window_size_test.cpp  workspace_registry_test.cpp
tests/experts/: expert_registry_test.cpp
tests/feedback/: feedback_upload_test.cpp
tests/gitinfo/: git_context_collector_test.cpp  git_context_core_test.cpp  git_ops_test.cpp  web_worktree_intent_test.cpp
tests/headless/: headless_ask_result_test.cpp  headless_jsonl_process_driver.cpp  headless_jsonl_process_test.cpp  headless_jsonl_test.cpp  headless_options_test.cpp
tests/history/: input_history_store_test.cpp
tests/hooks/: hook_agent_loop_test.cpp  hook_config_test.cpp  hook_payload_test.cpp  hook_registry_test.cpp  hook_runner_test.cpp  hook_runtime_test.cpp
tests/image/: image_processor_test.cpp
tests/loop/: loop_schedule_test.cpp  loop_scheduler_test.cpp  loop_store_test.cpp  loop_types_test.cpp
tests/lsp/: lsp_client_test.cpp  lsp_diagnostics_format_test.cpp  lsp_frame_test.cpp  lsp_server_registry_test.cpp  lsp_service_test.cpp  lsp_uri_test.cpp  lsp_which_test.cpp
tests/markdown/: mermaid_renderer_test.cpp
tests/memory/: memory_index_test.cpp  memory_read_tool_test.cpp  memory_registry_test.cpp  memory_write_tool_test.cpp
tests/network/: proxy_resolver_fallback_test.cpp  proxy_resolver_test.cpp  tcp_probe_test.cpp
tests/path_reference/: path_reference_test.cpp
tests/project_instructions/: instructions_loader_test.cpp
tests/prompt/: expert_context_prompt_test.cpp  git_status_prompt_test.cpp  skills_index_prompt_test.cpp  system_datetime_test.cpp  system_prompt_test.cpp
tests/provider/: anthropic_provider_test.cpp  apply_model_to_session_test.cpp  cwd_model_override_test.cpp  model_context_resolver_test.cpp  model_pool_status_test.cpp  model_resolver_test.cpp  models_dev_paths_test.cpp  models_dev_registry_test.cpp  openai_content_parts_test.cpp  openai_provider_abort_test.cpp  openai_provider_base_url_test.cpp  openai_provider_error_recovery_test.cpp  openai_provider_reasoning_test.cpp  openai_provider_request_headers_test.cpp  openai_provider_sse_prefix_test.cpp  openai_provider_tool_call_snapshot_test.cpp  provider_auth_accessors_test.cpp  provider_factory_test.cpp
tests/remote_control/: channel_boundary_guard_test.cpp  channel_plugin_test.cpp  channel_question_bridge_test.cpp  outbound_summary_test.cpp  remote_control_hub_test.cpp  remote_control_service_test.cpp  session_channel_binder_test.cpp
tests/scripts/: tui_chat_viewport_scripts_test.py
tests/session/: ask_user_question_prompter_test.cpp  attachment_store_test.cpp  compact_checkpoint_test.cpp  event_dispatcher_test.cpp  (+26 more)
webview_demo/: CLAUDE.md  CMakeLists.txt
(+1310 files in other folders)
